// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Settings — snapshot > corresponde ao snapshot com lembrete diário desabilitado 1`] = `
<div>
  <div
    class="flex min-h-screen flex-col bg-gradient-to-b from-page-bg-light to-page-bg pb-24"
  >
    <div
      data-testid="app-page-header"
    >
      Configurações
    </div>
    <div
      class="mx-auto w-full max-w-lg space-y-5 px-4 py-5"
    >
      <section
        class="rounded-2xl border-2 border-stroke-light bg-card"
      >
        <p
          class="px-4 pt-4 text-[11px] font-extrabold uppercase tracking-wider text-foreground-tertiary"
        >
          Preferências
        </p>
        <div
          class="divide-y divide-stroke-muted"
        >
          <div
            class="flex items-center gap-3 px-4 py-3"
          >
            <svg
              class="lucide lucide-bell h-5 w-5 text-emerald"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 8a6 6 0 0 1 12 0c0 7 3 9 3 9H3s3-2 3-9"
              />
              <path
                d="M10.3 21a1.94 1.94 0 0 0 3.4 0"
              />
            </svg>
            <span
              class="flex-1 text-sm font-semibold text-foreground-dark"
            >
              Notificações push
            </span>
            <button
              aria-checked="true"
              class="peer inline-flex h-5 w-9 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent shadow-sm transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=unchecked]:bg-input"
              data-state="checked"
              role="switch"
              type="button"
              value="on"
            >
              <span
                class="pointer-events-none block h-4 w-4 rounded-full bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-4 data-[state=unchecked]:translate-x-0"
                data-state="checked"
              />
            </button>
          </div>
          <div
            class="flex items-center gap-3 px-4 py-3"
          >
            <svg
              class="lucide lucide-volume2 h-5 w-5 text-emerald"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polygon
                points="11 5 6 9 2 9 2 15 6 15 11 19 11 5"
              />
              <path
                d="M15.54 8.46a5 5 0 0 1 0 7.07"
              />
              <path
                d="M19.07 4.93a10 10 0 0 1 0 14.14"
              />
            </svg>
            <span
              class="flex-1 text-sm font-semibold text-foreground-dark"
            >
              Sons e efeitos
            </span>
            <button
              aria-checked="true"
              class="peer inline-flex h-5 w-9 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent shadow-sm transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=unchecked]:bg-input"
              data-state="checked"
              role="switch"
              type="button"
              value="on"
            >
              <span
                class="pointer-events-none block h-4 w-4 rounded-full bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-4 data-[state=unchecked]:translate-x-0"
                data-state="checked"
              />
            </button>
          </div>
          <div
            class="flex items-center gap-3 px-4 py-3"
          >
            <svg
              class="lucide lucide-sparkles h-5 w-5 text-emerald"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m12 3-1.912 5.813a2 2 0 0 1-1.275 1.275L3 12l5.813 1.912a2 2 0 0 1 1.275 1.275L12 21l1.912-5.813a2 2 0 0 1 1.275-1.275L21 12l-5.813-1.912a2 2 0 0 1-1.275-1.275L12 3Z"
              />
              <path
                d="M5 3v4"
              />
              <path
                d="M19 17v4"
              />
              <path
                d="M3 5h4"
              />
              <path
                d="M17 19h4"
              />
            </svg>
            <span
              class="flex-1 text-sm font-semibold text-foreground-dark"
            >
              Lembrete diário (streak)
            </span>
            <button
              aria-checked="false"
              class="peer inline-flex h-5 w-9 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent shadow-sm transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=unchecked]:bg-input"
              data-state="unchecked"
              role="switch"
              type="button"
              value="on"
            >
              <span
                class="pointer-events-none block h-4 w-4 rounded-full bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-4 data-[state=unchecked]:translate-x-0"
                data-state="unchecked"
              />
            </button>
          </div>
          <div
            class="flex items-center gap-3 px-4 py-3"
          >
            <svg
              class="lucide lucide-globe h-5 w-5 text-emerald"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M12 2a14.5 14.5 0 0 0 0 20 14.5 14.5 0 0 0 0-20"
              />
              <path
                d="M2 12h20"
              />
            </svg>
            <span
              class="flex-1 text-sm font-semibold text-foreground-dark"
            >
              Idioma
            </span>
            <span
              class="text-xs font-semibold text-foreground-tertiary"
            >
              Português (BR)
            </span>
          </div>
          <div
            class="flex items-center gap-3 px-4 py-3"
          >
            <span
              class="flex-1 text-sm font-semibold text-foreground-dark"
            >
              Tema
            </span>
            <div
              data-testid="theme-toggle"
            />
          </div>
        </div>
      </section>
      <section
        class="rounded-2xl border-2 border-stroke-light bg-card"
      >
        <p
          class="px-4 pt-4 text-[11px] font-extrabold uppercase tracking-wider text-foreground-tertiary"
        >
          Conta
        </p>
        <div
          class="divide-y divide-stroke-muted"
        >
          <a
            class="flex items-center gap-3 px-4 py-3 hover:bg-surface-soft"
            href="/certificates"
          >
            <svg
              class="lucide lucide-award h-5 w-5 text-emerald"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="8"
                r="6"
              />
              <path
                d="M15.477 12.89 17 22l-5-3-5 3 1.523-9.11"
              />
            </svg>
            <span
              class="flex-1 text-sm font-semibold text-foreground-dark"
            >
              Meus certificados
            </span>
            <svg
              class="lucide lucide-chevron-right h-4 w-4 text-foreground-tertiary"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9 18 6-6-6-6"
              />
            </svg>
          </a>
          <a
            class="flex items-center gap-3 px-4 py-3 hover:bg-surface-soft"
            href="/roadmap"
          >
            <svg
              class="lucide lucide-map h-5 w-5 text-emerald"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.106 5.553a2 2 0 0 0 1.788 0l3.659-1.83A1 1 0 0 1 21 4.619v12.764a1 1 0 0 1-.553.894l-4.553 2.277a2 2 0 0 1-1.788 0l-4.212-2.106a2 2 0 0 0-1.788 0l-3.659 1.83A1 1 0 0 1 3 19.381V6.618a1 1 0 0 1 .553-.894l4.553-2.277a2 2 0 0 1 1.788 0z"
              />
              <path
                d="M15 5.764v15"
              />
              <path
                d="M9 3.236v15"
              />
            </svg>
            <span
              class="flex-1 text-sm font-semibold text-foreground-dark"
            >
              Roadmap do produto
            </span>
            <svg
              class="lucide lucide-chevron-right h-4 w-4 text-foreground-tertiary"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9 18 6-6-6-6"
              />
            </svg>
          </a>
          <a
            class="flex items-center gap-3 px-4 py-3 hover:bg-surface-soft"
            href="/premium"
          >
            <svg
              class="lucide lucide-shield h-5 w-5 text-luxury"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
              />
            </svg>
            <span
              class="flex-1 text-sm font-semibold text-foreground-dark"
            >
              Assinatura Premium
            </span>
            <svg
              class="lucide lucide-chevron-right h-4 w-4 text-foreground-tertiary"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9 18 6-6-6-6"
              />
            </svg>
          </a>
          <button
            class="flex w-full items-center gap-3 px-4 py-3 text-left hover:bg-surface-soft"
          >
            <svg
              class="lucide lucide-circle-help h-5 w-5 text-emerald"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
            <span
              class="flex-1 text-sm font-semibold text-foreground-dark"
            >
              Ajuda e suporte
            </span>
            <svg
              class="lucide lucide-chevron-right h-4 w-4 text-foreground-tertiary"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9 18 6-6-6-6"
              />
            </svg>
          </button>
        </div>
      </section>
      <button
        class="flex w-full items-center justify-center gap-2 rounded-2xl border-2 border-red-500/30 bg-card py-3 text-sm font-bold text-red-500 hover:bg-red-500/5 disabled:opacity-60"
        type="button"
      >
        <svg
          class="lucide lucide-log-out h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"
          />
          <polyline
            points="16 17 21 12 16 7"
          />
          <line
            x1="21"
            x2="9"
            y1="12"
            y2="12"
          />
        </svg>
         
        Sair da conta
      </button>
      <p
        class="text-center text-[11px] text-foreground-tertiary"
      >
        PromptLabz · v0.3 MVP
      </p>
      <div
        class="mx-auto w-full max-w-lg px-4 py-6"
      >
        <section
          class="rounded-2xl border-2 border-stroke-light bg-card"
        >
          <p
            class="px-4 pt-4 text-[11px] font-extrabold uppercase tracking-wider text-foreground-tertiary"
          >
            Feedback
          </p>
          <div
            class="flex items-center gap-3 px-4 py-6"
          >
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-bold tracking-[0.8px] uppercase transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 select-none rounded-[12px] border-2 border-[#e5e5e5] dark:border-[#3a3a3a] bg-white text-[#1cb0f6] hover:bg-[#f7f7f7] dark:hover:bg-[#2a2a2a] active:translate-y-[2px] h-12 px-6 text-[15px] w-full"
            >
              Avalie nosso projeto
            </button>
          </div>
        </section>
      </div>
    </div>
    <div
      data-testid="app-bottom-nav"
    />
  </div>
</div>
`;

exports[`Settings — snapshot > corresponde ao snapshot com todos os toggles habilitados 1`] = `
<div>
  <div
    class="flex min-h-screen flex-col bg-gradient-to-b from-page-bg-light to-page-bg pb-24"
  >
    <div
      data-testid="app-page-header"
    >
      Configurações
    </div>
    <div
      class="mx-auto w-full max-w-lg space-y-5 px-4 py-5"
    >
      <section
        class="rounded-2xl border-2 border-stroke-light bg-card"
      >
        <p
          class="px-4 pt-4 text-[11px] font-extrabold uppercase tracking-wider text-foreground-tertiary"
        >
          Preferências
        </p>
        <div
          class="divide-y divide-stroke-muted"
        >
          <div
            class="flex items-center gap-3 px-4 py-3"
          >
            <svg
              class="lucide lucide-bell h-5 w-5 text-emerald"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 8a6 6 0 0 1 12 0c0 7 3 9 3 9H3s3-2 3-9"
              />
              <path
                d="M10.3 21a1.94 1.94 0 0 0 3.4 0"
              />
            </svg>
            <span
              class="flex-1 text-sm font-semibold text-foreground-dark"
            >
              Notificações push
            </span>
            <button
              aria-checked="true"
              class="peer inline-flex h-5 w-9 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent shadow-sm transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=unchecked]:bg-input"
              data-state="checked"
              role="switch"
              type="button"
              value="on"
            >
              <span
                class="pointer-events-none block h-4 w-4 rounded-full bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-4 data-[state=unchecked]:translate-x-0"
                data-state="checked"
              />
            </button>
          </div>
          <div
            class="flex items-center gap-3 px-4 py-3"
          >
            <svg
              class="lucide lucide-volume2 h-5 w-5 text-emerald"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polygon
                points="11 5 6 9 2 9 2 15 6 15 11 19 11 5"
              />
              <path
                d="M15.54 8.46a5 5 0 0 1 0 7.07"
              />
              <path
                d="M19.07 4.93a10 10 0 0 1 0 14.14"
              />
            </svg>
            <span
              class="flex-1 text-sm font-semibold text-foreground-dark"
            >
              Sons e efeitos
            </span>
            <button
              aria-checked="true"
              class="peer inline-flex h-5 w-9 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent shadow-sm transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=unchecked]:bg-input"
              data-state="checked"
              role="switch"
              type="button"
              value="on"
            >
              <span
                class="pointer-events-none block h-4 w-4 rounded-full bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-4 data-[state=unchecked]:translate-x-0"
                data-state="checked"
              />
            </button>
          </div>
          <div
            class="flex items-center gap-3 px-4 py-3"
          >
            <svg
              class="lucide lucide-sparkles h-5 w-5 text-emerald"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m12 3-1.912 5.813a2 2 0 0 1-1.275 1.275L3 12l5.813 1.912a2 2 0 0 1 1.275 1.275L12 21l1.912-5.813a2 2 0 0 1 1.275-1.275L21 12l-5.813-1.912a2 2 0 0 1-1.275-1.275L12 3Z"
              />
              <path
                d="M5 3v4"
              />
              <path
                d="M19 17v4"
              />
              <path
                d="M3 5h4"
              />
              <path
                d="M17 19h4"
              />
            </svg>
            <span
              class="flex-1 text-sm font-semibold text-foreground-dark"
            >
              Lembrete diário (streak)
            </span>
            <button
              aria-checked="true"
              class="peer inline-flex h-5 w-9 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent shadow-sm transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=unchecked]:bg-input"
              data-state="checked"
              role="switch"
              type="button"
              value="on"
            >
              <span
                class="pointer-events-none block h-4 w-4 rounded-full bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-4 data-[state=unchecked]:translate-x-0"
                data-state="checked"
              />
            </button>
          </div>
          <div
            class="flex items-center gap-3 px-4 py-3"
          >
            <svg
              class="lucide lucide-globe h-5 w-5 text-emerald"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M12 2a14.5 14.5 0 0 0 0 20 14.5 14.5 0 0 0 0-20"
              />
              <path
                d="M2 12h20"
              />
            </svg>
            <span
              class="flex-1 text-sm font-semibold text-foreground-dark"
            >
              Idioma
            </span>
            <span
              class="text-xs font-semibold text-foreground-tertiary"
            >
              Português (BR)
            </span>
          </div>
          <div
            class="flex items-center gap-3 px-4 py-3"
          >
            <span
              class="flex-1 text-sm font-semibold text-foreground-dark"
            >
              Tema
            </span>
            <div
              data-testid="theme-toggle"
            />
          </div>
        </div>
      </section>
      <section
        class="rounded-2xl border-2 border-stroke-light bg-card"
      >
        <p
          class="px-4 pt-4 text-[11px] font-extrabold uppercase tracking-wider text-foreground-tertiary"
        >
          Conta
        </p>
        <div
          class="divide-y divide-stroke-muted"
        >
          <a
            class="flex items-center gap-3 px-4 py-3 hover:bg-surface-soft"
            href="/certificates"
          >
            <svg
              class="lucide lucide-award h-5 w-5 text-emerald"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="8"
                r="6"
              />
              <path
                d="M15.477 12.89 17 22l-5-3-5 3 1.523-9.11"
              />
            </svg>
            <span
              class="flex-1 text-sm font-semibold text-foreground-dark"
            >
              Meus certificados
            </span>
            <svg
              class="lucide lucide-chevron-right h-4 w-4 text-foreground-tertiary"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9 18 6-6-6-6"
              />
            </svg>
          </a>
          <a
            class="flex items-center gap-3 px-4 py-3 hover:bg-surface-soft"
            href="/roadmap"
          >
            <svg
              class="lucide lucide-map h-5 w-5 text-emerald"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.106 5.553a2 2 0 0 0 1.788 0l3.659-1.83A1 1 0 0 1 21 4.619v12.764a1 1 0 0 1-.553.894l-4.553 2.277a2 2 0 0 1-1.788 0l-4.212-2.106a2 2 0 0 0-1.788 0l-3.659 1.83A1 1 0 0 1 3 19.381V6.618a1 1 0 0 1 .553-.894l4.553-2.277a2 2 0 0 1 1.788 0z"
              />
              <path
                d="M15 5.764v15"
              />
              <path
                d="M9 3.236v15"
              />
            </svg>
            <span
              class="flex-1 text-sm font-semibold text-foreground-dark"
            >
              Roadmap do produto
            </span>
            <svg
              class="lucide lucide-chevron-right h-4 w-4 text-foreground-tertiary"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9 18 6-6-6-6"
              />
            </svg>
          </a>
          <a
            class="flex items-center gap-3 px-4 py-3 hover:bg-surface-soft"
            href="/premium"
          >
            <svg
              class="lucide lucide-shield h-5 w-5 text-luxury"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
              />
            </svg>
            <span
              class="flex-1 text-sm font-semibold text-foreground-dark"
            >
              Assinatura Premium
            </span>
            <svg
              class="lucide lucide-chevron-right h-4 w-4 text-foreground-tertiary"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9 18 6-6-6-6"
              />
            </svg>
          </a>
          <button
            class="flex w-full items-center gap-3 px-4 py-3 text-left hover:bg-surface-soft"
          >
            <svg
              class="lucide lucide-circle-help h-5 w-5 text-emerald"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
            <span
              class="flex-1 text-sm font-semibold text-foreground-dark"
            >
              Ajuda e suporte
            </span>
            <svg
              class="lucide lucide-chevron-right h-4 w-4 text-foreground-tertiary"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9 18 6-6-6-6"
              />
            </svg>
          </button>
        </div>
      </section>
      <button
        class="flex w-full items-center justify-center gap-2 rounded-2xl border-2 border-red-500/30 bg-card py-3 text-sm font-bold text-red-500 hover:bg-red-500/5 disabled:opacity-60"
        type="button"
      >
        <svg
          class="lucide lucide-log-out h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"
          />
          <polyline
            points="16 17 21 12 16 7"
          />
          <line
            x1="21"
            x2="9"
            y1="12"
            y2="12"
          />
        </svg>
         
        Sair da conta
      </button>
      <p
        class="text-center text-[11px] text-foreground-tertiary"
      >
        PromptLabz · v0.3 MVP
      </p>
      <div
        class="mx-auto w-full max-w-lg px-4 py-6"
      >
        <section
          class="rounded-2xl border-2 border-stroke-light bg-card"
        >
          <p
            class="px-4 pt-4 text-[11px] font-extrabold uppercase tracking-wider text-foreground-tertiary"
          >
            Feedback
          </p>
          <div
            class="flex items-center gap-3 px-4 py-6"
          >
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-bold tracking-[0.8px] uppercase transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 select-none rounded-[12px] border-2 border-[#e5e5e5] dark:border-[#3a3a3a] bg-white text-[#1cb0f6] hover:bg-[#f7f7f7] dark:hover:bg-[#2a2a2a] active:translate-y-[2px] h-12 px-6 text-[15px] w-full"
            >
              Avalie nosso projeto
            </button>
          </div>
        </section>
      </div>
    </div>
    <div
      data-testid="app-bottom-nav"
    />
  </div>
</div>
`;
